import fatass


class Education(fatass.Node):
    pass
