import fatass


class Publications(fatass.Node):
    pass
