import fatass


class Checkpoints(fatass.Chain):
    pass
