import fatass


class File(fatass.SinglePdf):
    pass
