import fatass


class Source(fatass.Node):
    pass
