import fatass


class Templates(fatass.Chain):
    pass
