import fatass


class Portfolio(fatass.Node):
    pass
