import fatass


class Awards(fatass.Chain):
    pass
