import fatass


class BasicInfo(fatass.Tuple):
    FIELDS = ('name', 'email', 'phone', 'location', 'website', 'linkedin', 'github')
