import fatass


class Certifications(fatass.Chain):
    pass
