import fatass


class Courseworks(fatass.SingleCsv):
    FIELDS = ("course",)
