import fatass


class Interests(fatass.SingleMd):
    pass
