import fatass


class Languages(fatass.Chain):
    pass
