import fatass


class Photo(fatass.SinglePng):
    pass
