import fatass


class ResearchExperience(fatass.Chain):
    pass
