import fatass


class Skills(fatass.SingleMd):
    pass
