import fatass


class WorkingExperience(fatass.Chain):
    pass
