import fatass


class Info(fatass.Tuple):
    FIELDS = ('titile', 'role', 'start_time', 'end_time', 'context', 'url')
