import fatass


class Projects(fatass.Chain):
    pass
