import fatass


class Website(fatass.Node):
    pass
